# 24b-emb-expert-2-GabrielBuhrer

./: CMakeLists.txt
freertos/: FreeRTOSConfig.h
main/: CMakeLists.txt  main.c
oled1_lib/: CMakeLists.txt  btns_leds.h  gfx.h
